insert into buttion

--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -6,6 +6,6 @@
     <title>这是一个标题</title>
 </head>
 <body>
-<input tupe="button" value="修改" />
+<input type="button" value="修改" />
 </body>
 </html>
